// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should match snapshot 1`] = `
Object {
  "data": Object {
    "upsertGauge": Object {
      "code": "nor3",
      "cron": "10 * * * *",
      "enabled": false,
      "flowUnit": "m3/s",
      "language": "en",
      "levelUnit": "cm",
      "location": Object {
        "coordinates": Array [
          11.1,
          12.2,
          1.1,
        ],
        "kind": "gauge",
        "language": "en",
      },
      "name": "norway gauge 3",
      "requestParams": Object {
        "foo": "bar",
      },
      "source": Object {
        "language": "en",
        "name": "Norway",
      },
      "url": "http://nve.no/nor3",
    },
  },
}
`;

exports[`resolvers chain should throw on invalid input 1`] = `
Object {
  "0": Object {
    "message": "\\"id\\" must be a valid GUID",
    "path": "gauge.id",
  },
  "1": Object {
    "message": "\\"name\\" length must be at least 3 characters long",
    "path": "gauge.name",
  },
  "10": Object {
    "message": "\\"cron\\" must be valid crontab expression",
    "path": "gauge.cron",
  },
  "11": Object {
    "message": "\\"url\\" must be a valid uri",
    "path": "gauge.url",
  },
  "12": Object {
    "message": "\\"id\\" must be a valid GUID",
    "path": "gauge.source.id",
  },
  "2": Object {
    "message": "\\"code\\" length must be at least 3 characters long",
    "path": "gauge.code",
  },
  "3": Object {
    "message": "\\"levelUnit\\" is not allowed to be empty",
    "path": "gauge.levelUnit",
  },
  "4": Object {
    "message": "\\"levelUnit\\" length must be at least 1 characters long",
    "path": "gauge.levelUnit",
  },
  "5": Object {
    "message": "\\"flowUnit\\" is not allowed to be empty",
    "path": "gauge.flowUnit",
  },
  "6": Object {
    "message": "\\"flowUnit\\" length must be at least 1 characters long",
    "path": "gauge.flowUnit",
  },
  "7": Object {
    "message": "\\"id\\" must be a valid GUID",
    "path": "gauge.location.id",
  },
  "8": Object {
    "message": "\\"name\\" length must be at least 3 characters long",
    "path": "gauge.location.name",
  },
  "9": Object {
    "message": "\\"longitude\\" must be less than or equal to 180",
    "path": "gauge.location.coordinates.0",
  },
}
`;

exports[`update should match snapshot 1`] = `
Object {
  "data": Object {
    "upsertGauge": Object {
      "code": "gal1",
      "cron": "10 * * * *",
      "enabled": true,
      "flowUnit": "cm3/s",
      "language": "en",
      "levelUnit": "m",
      "location": Object {
        "coordinates": Array [
          11.1,
          12.2,
          1.1,
        ],
        "kind": "gauge",
        "language": "en",
      },
      "name": "GALICIA GAUGE 1",
      "requestParams": Object {
        "lol": "fun",
      },
      "source": Object {
        "language": "en",
        "name": "Galicia",
      },
      "url": "http://galic.ia/gal1",
    },
  },
}
`;
